# phishing_detector

./: feature_extractor.pkl  metadata.pkl  phishing_model.pkl  pyproject.toml
