[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-detector"
version = "1.0.0"
description = "Machine learning phishing email detector"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["phishing", "email", "security", "machine-learning"]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "lightgbm>=4.0.0",
    "joblib>=1.2.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/phishing-detector"
Repository = "https://github.com/YOUR_USERNAME/phishing-detector"
Issues = "https://github.com/YOUR_USERNAME/phishing-detector/issues"

[project.scripts]
phishing-detect = "phishing_detector.cli:main"

[tool.setuptools]
packages = ["phishing_detector"]

[tool.setuptools.package-data]
phishing_detector = ["models/*.pkl"]
