[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-detector"
version = "1.0.0"
description = "Machine learning phishing email detector"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Everett Junco"}
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "lightgbm>=4.0.0",
    "joblib>=1.2.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/everettjunco-torq/phishing_detector"
Repository = "https://github.com/everettjunco-torq/phishing_detector"

[tool.setuptools.packages.find]
where = ["."]
include = ["phishing_detector*"]
